--- a/volumes/telegraf/config/telegraf.conf
+++ b/volumes/telegraf/config/telegraf.conf
@@ -75,7 +75,7 @@
   # logfile_rotation_max_archives = 5
 
   ## Override default hostname, if empty use os.Hostname()
-  hostname = ""
+  hostname = "witness.almalinux.org"
   ## If set to true, do no set the "host" tag in the telegraf agent.
   omit_hostname = false
 
@@ -86,9 +86,7 @@
   servers = ["tcp://mosquitto:1883"]
   topic_tag = "topic"
   # expected topic format: "stats/usage/{platform}/{org}/{image}"
-  topics = [
-    "stats/usage/+/+/+"
-  ]
+  topics = ["stats/usage/+/+/+"]
   qos = 1
   connection_timeout = "30s"
   data_format = "json"
@@ -96,6 +94,19 @@
   json_time_format = "2006-01-02T15:04:05Z"
   persistent_session = true
   client_id = "distro_spread_telegraf"
+
+[[inputs.mqtt_consumer]]
+  name_override = "alma_social"
+  servers  = ["tcp://mosquitto:1883"]
+  topic_tag = "topic"
+  topics = ["stats/social/+"]
+  qos = 1
+  connection_timeout = "30s"
+  data_format = "json"
+  json_time_key = "ts"
+  json_time_format = "2006-01-02T15:04:05Z"
+  persistent_session = true
+  client_id = "alma_social_telegraf"
 
 # convert "topic" tag into field so that it can be parsed
 [[processors.converter]]
@@ -110,8 +121,11 @@
   drop_original = false
   merge = "override"
   data_format = "grok"
-  grok_patterns = ['stats/usage/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}/%{TOPIC_PART:image:tag}$']
-  grok_custom_patterns = 'TOPIC_PART \w+'
+  grok_patterns = [
+    'stats/usage/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}/%{TOPIC_PART:image:tag}$',
+    'stats/social/%{TOPIC_PART:platform:tag}$'
+  ]
+  grok_custom_patterns = 'TOPIC_PART [\w.]+'
 
 # convert "topic" field to tag so that it can be excluded from output
 [[processors.converter]]
@@ -125,7 +139,7 @@
 
 # # Configuration for sending metrics to InfluxDB
 [[outputs.influxdb_v2]]
-  namepass = ["distro_spread"]
+  namepass = ["distro_spread", "alma_social"]
   urls = ["http://influxdb:8086"]
   token = "$INFLUX_TOKEN"
   organization = "AlmaLinux"
