Adds Reddit visitors sensor (fixes #2)
Signed-off-by: Eugene Zamriy <eugene@zamriy.info>

--- a/volumes/telegraf/config/telegraf.conf
+++ b/volumes/telegraf/config/telegraf.conf
@@ -99,7 +99,10 @@
   name_override = "alma_social"
   servers  = ["tcp://mosquitto:1883"]
   topic_tag = "topic"
-  topics = ["stats/social/+"]
+  topics = [
+    "stats/social/+",
+    "stats/social/reddit/+"
+  ]
   qos = 1
   connection_timeout = "30s"
   data_format = "json"
@@ -123,7 +126,8 @@
   data_format = "grok"
   grok_patterns = [
     'stats/usage/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}/%{TOPIC_PART:image:tag}$',
-    'stats/social/%{TOPIC_PART:platform:tag}$'
+    'stats/social/%{TOPIC_PART:platform:tag}$',
+    'stats/social/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}$'
   ]
   grok_custom_patterns = 'TOPIC_PART [\w.]+'
 
