Adds GitHub repository popularity sensor (fixes #3)
Signed-off-by: Eugene Zamriy <eugene@zamriy.info>

--- a/volumes/telegraf/config/telegraf.conf
+++ b/volumes/telegraf/config/telegraf.conf
@@ -101,7 +101,8 @@
   topic_tag = "topic"
   topics = [
     "stats/social/+",
-    "stats/social/reddit/+"
+    "stats/social/reddit/+",
+    "stats/social/github/+/+"
   ]
   qos = 1
   connection_timeout = "30s"
@@ -127,9 +128,13 @@
   grok_patterns = [
     'stats/usage/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}/%{TOPIC_PART:image:tag}$',
     'stats/social/%{TOPIC_PART:platform:tag}$',
-    'stats/social/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}$'
+    'stats/social/%{TOPIC_PART:platform:tag}/%{TOPIC_PART:org:tag}$',
+    'stats/social/%{GITHUB:platform:tag}/%{TOPIC_PART:org:tag}/%{TOPIC_PART:repo:tag}$'
   ]
-  grok_custom_patterns = 'TOPIC_PART [\w.]+'
+  grok_custom_patterns = '''
+    GITHUB github
+    TOPIC_PART [\w-_.]+
+  '''
 
 # convert "topic" field to tag so that it can be excluded from output
 [[processors.converter]]
