Adds DistroWatch statistics gathering support (fixes #5)

--- a/volumes/telegraf/config/telegraf.conf
+++ b/volumes/telegraf/config/telegraf.conf
@@ -101,6 +101,7 @@
   topic_tag = "topic"
   topics = [
     "stats/social/+",
+    "stats/social/distrowatch/+",
     "stats/social/reddit/+",
     "stats/social/github/+/+"
   ]
